Fix more spacing

--- a/src/components/stage-selector/stage-selector.css
+++ b/src/components/stage-selector/stage-selector.css
@@ -92,6 +92,6 @@ $header-height: calc($stage-menu-height - 2px);
     font-weight: bold;
     text-align: center;
     position: absolute;
-    bottom: 0.5rem;
+    bottom: 0.75rem;
     left: 0.25rem;
 }
